--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <footer th:fragment="footerFragment">
     <div class="container">
         <p>
-            © <a href="http://egyou.github.io">egyou github</a>
+            © <a href="http://kimkahyun.github.io">kimkahyun github</a>
         </p>
 	</div>	
 </footer>
