--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
+        	<a class="navbar-brand" href="">kimkahyun.github.io</a>
             <a class="navbar-brand" href="/">Home</a>
             <a class="navbar-brand" href="/login">Login</a> 
             <a class="navbar-brand" href="/users">User List</a>
