--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>index.html</title>
-	<th:block th:include="fragments/header"></th:block>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 </head>
 <body>
-<footer th:include="fragments/nav :: nav"></footer>
-
-<div class="container" style="min-height: 500px">
-
-    <div class="starter-template">
-        <h1>Welcome!~~</h1>
-		
-    </div>
-
-</div>
-
-<th:block th:include="fragments/footer"></th:block>
-
+보내온 메시지는? <p th:text="${test}"></p>
+<p th:text="${egy}"></p>
 </body>
 </html>
