--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,10 +2,8 @@
     <div class="container">
         <div class="navbar-header">
         	<a class="navbar-brand" href="">kimkahyun.github.io</a>
-            <a class="navbar-brand" href="/">Home</a>
-            <a class="navbar-brand" href="/login">Login</a> 
-            <a class="navbar-brand" href="/users">User List</a>
-            <a class="navbar-brand" href="/register">Register</a>
+            <a class="navbar-brand" href="/users">회원목록</a>
+            <a class="navbar-brand" href="/register">회원등록</a>
                        
         </div>
     </div>
