--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,12 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" 
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>등록 폼</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>사용자 정보 조회</title>
+    <th:block th:include="fragments/header"></th:block>
+    <!-- 웹브라우저에 내장된 html 인터프리터에게 무시
+ 	<script type="text/javascript" src="/js/main.js"></script>
+	-->
 </head>
 <body>
-
+<th:block th:include="fragments/nav"></th:block>
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
@@ -38,6 +40,6 @@
   crossorigin="anonymous"></script>
   
 <script type="text/javascript" src="js/main.js"></script>
-
+<th:block th:include="fragments/footer"></th:block>
 </body>
 </html>
